day 2 - Added notes as comments and introduced interpolation

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,3 @@
-<h1>Welcome! To My Angular Project</h1>
+<h1>Welocme to my {{ title }}</h1>
+<p> the sum of {{ a }} and {{ b }} is {{ sum }} </p>
 <app-first-component></app-first-component>
