day 3 - Learned property binding

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,5 @@
 <h1>Welocme to my {{ title }}</h1>
 <p> the sum of {{ a }} and {{ b }} is {{ sum }} </p>
+<img [src] = "imageUrl" alt="Image will be displayed here once the URL is provided">
+<br>
 <app-first-component></app-first-component>
